# benign-malicious-js

./: .gitignore  dataset.ipynb  dataset.svm  features.csv  fnn.ipynb  mlp.ipynb  pyproject.toml  random_forest.ipynb
js/test_files/: benign_google_1.js  benign_toastify.js
